--- a/src/eelsystemd/web/src/index.html
+++ b/src/eelsystemd/web/src/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>My Parcel App</title>
+    <script type="text/javascript" src="http://localhost:8088/eel.js"></script>
+    <script>
+        eel.expose(echo);
+        function echo(text) {
+            console.log(text);
+        }
+    </script>
   </head>
   <body>
     <div id="app"></div>
