first python->js function

--- a/src/eelsystemd/web/src/index.html
+++ b/src/eelsystemd/web/src/index.html
@@ -9,6 +9,7 @@
         function echo(text) {
             console.log(text);
         }
+        eel.hello("eel");
     </script>
   </head>
   <body>
