fix application name

--- a/src/eelsystemd/web/src/index.html
+++ b/src/eelsystemd/web/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>My Parcel App</title>
+    <title>eelsystemd</title>
     <script type="text/javascript" src="http://localhost:8088/eel.js"></script>
     <script>
         eel.expose(echo);
